Fix dialog `z-index`

--- a/src/public/stylesheets/dialog.css
+++ b/src/public/stylesheets/dialog.css
@@ -1,7 +1,7 @@
 .dialog-container
 {
    position: absolute;
-   z-index: 999999999;
+   z-index: 9999;
    top: 0;
    right: 0;
    bottom: 0;
